# Browser_Bots

./: README.md
Basic_bot/: cookie_clicker_bot.py  hello.py
Chat_Bot/: .gitignore  main.py  pyproject.toml
Chat_Bot/app/config/: db.py
Chat_Bot/app/models/: chat.py  user.py
Chat_Bot/app/routers/: chat.py  user.py
Chat_Bot/app/schemas/: chat.py  serializers.py  user.py
Chat_Bot/app/test/: test_chat_message.py
Chat_Bot/app/utils/: bookstore.json  chatResponse.py  hash.py
