[project]
name = "chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.4.26",
    "dnspython>=2.7.0",
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.1",
    "pymongo>=4.13.0",
    "pytest>=8.3.5",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
]
